# auto-coin

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  autotrade.py  bitcoin_trading.db  docker-compose.yml  main.py  pyproject.toml  test.py
.github/workflows/: deploy.yml
