[project]
name = "auto-coin"
version = "0.1.0"
description = "AI-powered Bitcoin trading system"
authors = [
    {name = "ChoDaeBeom", email = "tmdgns743@gmail.com"}
]
dependencies = [
    "openai>=1.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "google-search-results>=2.4.2",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
